--- a/README.org
+++ b/README.org
@@ -24,3 +24,8 @@ A sample JDBC servlet in a web application.
 * restcache
 
 A sample JDG library mode application to be deployed on EAP.
+
+
+* standalonecache
+
+A sample JDG library mode application to run as a standalone Java.
