--- a/README.org
+++ b/README.org
@@ -29,3 +29,8 @@ A sample JDG library mode application to be deployed on EAP.
 * standalonecache
 
 A sample JDG library mode application to run as a standalone Java.
+
+
+* jdgquery
+
+A sample JDG 7 application to be deployed on EAP 6.
